--- a/.gitignore
+++ b/.gitignore
@@ -210,3 +210,7 @@ login/static/login/day_data.json
 login/static/login/hour_data.json
 
 node_modules
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
