--- a/requirements.txt
+++ b/requirements.txt
@@ -2,29 +2,46 @@ annotated-types==0.6.0
 anyio==4.0.0
 asgiref==3.7.2
 async-timeout==4.0.3
+awsebcli==3.20.10
+black==23.10.0
 certifi==2023.7.22
 charset-normalizer==3.3.0
+coverage==6.5.0
+coveralls==3.3.1
 deprecation==2.1.0
 Django==4.2.5
+flake8==6.1.0
+frozenlist==1.4.0
+gensim==4.3.2
 gotrue==1.2.0
 gunicorn==21.2.0
 h11==0.14.0
 httpcore==0.17.3
 httpx==0.24.1
 idna==3.4
+lyricsgenius==3.0.1
+mypy-extensions==1.0.0
+numpy==1.24.4
+openai==0.28.1
 packaging==23.2
 plotly==5.17.0
 postgrest==0.11.0
-psycopg2==2.9.9
+psycopg2-binary==2.9.9
 pydantic==2.4.2
 pydantic_core==2.10.1
 python-dateutil==2.8.2
 python-dotenv==1.0.0
+pyflakes==3.1.0
+pytest==6.2.5
 realtime==1.0.0
 redis==5.0.1
 requests==2.31.0
+scipy==1.10.1
 six==1.16.0
 sniffio==1.3.0
+spacy==3.7.2
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
 spotipy==2.23.0
 sqlparse==0.4.4
 storage3==0.6.1
@@ -33,5 +50,6 @@ supabase==1.2.0
 supafunc==0.2.3
 tenacity==8.2.3
 typing_extensions==4.8.0
-urllib3==2.0.6
+urllib3==1.26.6
 websockets==10.4
+yarl==1.9.2
